# FastCAE

./: .clang-format  .gitignore  CMakeLists.txt  Changelog.md  README.md
src/: CMakeLists.txt
src/BCBase/: BCBase.cpp  BCBase.h  BCDisplacement.h  BCPressure.h  BCScalarBase.h  BCTemperature.h  BCType.h  BCUserDef.h  BCVectorBase.h  CMakeLists.txt
src/Common/: CMakeLists.txt  CommonAPI.h  DebugLogger.cpp  DebugLogger.h  FakeClass.cpp  FakeClass.h  Singleton.h  Types.h
src/ConfigOptions/: BCConfig.h  BCConfigReader.h  CMakeLists.txt  ConfigDataBase.h  ConfigDataReader.h  ConfigOptions.h  DataConfig.h  DataConfigReader.h  GeometryConfig.h  GlobalConfig.h  GlobalConfigReader.h  MaterialConfig.h  MeshConfig.h  MesherInfo.cpp  MesherInfo.h  MesherPy.cpp  MesherPy.h  PostConfig.cpp  PostConfig.h  PostConfigInfo.h  PostCurve.h  ProjectTreeConfig.h  SolverConfig.cpp  SolverConfig.h  SolverInfo.cpp  SolverInfo.h  TreeConfigReader.h  TreeItemData.h
src/DataProperty/: CMakeLists.txt  ComponentBase.cpp  ComponentBase.h  DataBase.cpp  DataBase.h  ParameterBase.cpp  ParameterBase.h  ParameterBool.cpp  ParameterBool.h  ParameterColor.cpp  ParameterColor.h  ParameterDouble.cpp  ParameterDouble.h  ParameterGroup.cpp  ParameterGroup.h  ParameterInt.cpp  ParameterInt.h  ParameterList.cpp  ParameterList.h  ParameterPath.cpp  ParameterPath.h  ParameterTable.cpp  ParameterTable.h  PropertyList.cpp  PropertyList.h  modelTreeItemType.h
src/FastCAE/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  FastCAEVersionMacros.h  XBeautyUI.cpp  XBeautyUI.h  main.cpp
src/Geometry/: CMakeLists.txt  GeoCommon.cpp  GeoComponent.cpp  GeoComponent.h  GeometryPy.h  geometryData.h  geometryDatum.h  geometryExporter.cpp  geometryExporter.h  geometryParaBoolOperation.cpp  geometryParaBoolOperation.h  geometryParaChamfer.cpp  geometryParaCone.cpp  geometryParaFace.h  geometryParaFillet.cpp  geometryParaMakeFillGap.cpp  geometryParaMakeFillHole.cpp  geometryParaRevol.cpp  geometryParaRotateFeature.cpp  geometryParaSphere.cpp  geometryParaSweep.cpp  geometrySet.cpp
src/GeometryCommand/: CMakeLists.txt  GeoCommandBase.cpp  GeoCommandBase.h  GeoCommandBool.cpp  GeoCommandBool.h  GeoCommandCommon.cpp  GeoCommandCreateBox.cpp  GeoCommandCreateBox.h  GeoCommandCreateBoxComplex.cpp  GeoCommandCreateChamfer.cpp  GeoCommandCreateComponent.cpp  GeoCommandCreateComponent.h  GeoCommandCreateCone.cpp  GeoCommandCreateCylinder.cpp  GeoCommandCreateCylindricalComplex.cpp  GeoCommandCreateDatumplane.cpp  GeoCommandCreateFace.cpp  GeoCommandCreateFillet.cpp  GeoCommandCreateLine.cpp  GeoCommandCreatePoint.cpp  GeoCommandCreateSphere.cpp  GeoCommandCreateVariableFillet.cpp  GeoCommandFillGap.cpp  GeoCommandGeoSplitter.cpp  GeoCommandImport.cpp  GeoCommandImport.h  GeoCommandMakeExtrusion.cpp  GeoCommandMakeExtrusion.h  GeoCommandMakeFillHole.cpp  GeoCommandMakeLoft.cpp  GeoCommandMakeLoft.h  GeoCommandMakeMatrix.cpp  GeoCommandMakeRemoveSurface.cpp  GeoCommandMakeRevol.cpp  GeoCommandMakeRevol.h  GeoCommandMakeSweep.cpp  GeoCommandMirrorFeature.cpp  GeoCommandMoveFeature.cpp  GeoCommandPy.cpp  GeoCommandRemove.cpp  (+11 more)
src/GeometryDataExchange/: BREPdataExchange.cpp  BREPdataExchange.h  CMakeLists.txt  GeometryDataExchangeAPI.h  GeometryThreadBase.cpp  GeometryThreadBase.h  IGESdataExchange.cpp  IGESdataExchange.h  STEPdataExchange.cpp  STEPdataExchange.h  STLdataExchange.cpp  STLdataExchange.h
src/GeometryWidgets/: CMakeLists.txt  SketchPointWidget.cpp  SketchPointWidget.h  dialogBoolOperation.cpp  dialogBoolOperation.h  dialogCreateBox.cpp  dialogCreateBoxComplex.cpp  dialogCreateCone.cpp  dialogCreateCylinder.cpp  dialogCreateCylindricalComplex.cpp  dialogCreateDatumplane.cpp  dialogCreateDatumplane.h  dialogCreateFace.cpp  dialogCreateLine.cpp  dialogCreatePoint.cpp  dialogCreateSphere.cpp  dialogGeoSplitter.cpp  dialogMakeChamfer.cpp  dialogMakeExtrusion.cpp  dialogMakeExtrusion.h  dialogMakeFillGap.cpp  dialogMakeFillHole.cpp  dialogMakeFillet.cpp  dialogMakeLoft.cpp  dialogMakeLoft.h  dialogMakeMatrix.cpp  dialogMakeRemoveSurface.cpp  dialogMakeRevol.cpp  dialogMakeRevol.h  dialogMakeSweep.cpp  dialogMeasureDistance.cpp  dialogMirrorFeature.cpp  dialogMoveFeature.cpp  dialogRotateFeature.cpp  dialogSketchPlane.cpp  dialogVariableFillet.cpp  geoDialogBase.cpp  geoDialogBase.h  geoPointWidget.cpp  geoPointWidget.h  (+2 more)
src/GmshModule/: CMakeLists.txt  DialogFluidMesh.cpp  DialogFluidMesh.h  DialogLocalSetting.cpp  DialogLocalSetting.h  DialogLocalSetting.ui  DialogSolidMesh.cpp  DialogSolidMesh.h  DialogSurfaceMesh.cpp  DialogSurfaceMesh.h  FluidMeshPreProcess.cpp  GmshDialogBase.cpp  GmshDialogBase.h  GmshModule.cpp  GmshModule.h  GmshPy.cpp  GmshScriptWriter.cpp  GmshScriptWriter.h  GmshThread.cpp  GmshThread.h  GmshThreadManager.cpp  GmshThreadManager.h  LocalField.cpp  LocalField.h  MeshReader.cpp  MeshReader.h
src/IO/: CMakeLists.txt  GenerateMesh.cpp  GenerateMesh.h  IOConfig.cpp  IOConfig.h  ProjectFileIO.cpp  ProjectFileIO.h  SolverIO.cpp  SolverInfoWriter.cpp  SolverInfoWriter.h  TemplateReplacer.cpp  TemplateReplacer.h  vtkDataRelated.cpp  vtkDataRelated.h
src/License/: CMakeLists.txt  confirmation.cpp  confirmation.h  generateLicense.cpp  hardware.cpp
src/MainWidgets/: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  ControlPanel.ui  DialogCreateGeoComponent.cpp  DialogCreateGeoComponent.h  DialogCreateMaterial.cpp  DialogCreatePhysicsModel.cpp  DialogCreateSet.cpp  DialogCreateSet.h  DialogFilterMesh.cpp  DialogGeoMeshRotate.cpp  DialogGeoMeshRotate.h  DialogGeoMeshRotate.ui  DialogGeometryRename.cpp  DialogMeshChecking.cpp  DialogMeshRename.cpp  DialogMeshSetMerge.cpp  DialogSavePicture.cpp  DialogVTKTransform.cpp  GeometryWidget.cpp  GeometryWidget.h  MainWidgetsPy.cpp  MainWidgetsPy.h  MeshWidget.cpp  MeshWidget.h  PhysicsWidget.cpp  PhysicsWidget.h  ProcessWindow.cpp  ProcessWindow.h  PropertyTable.cpp  PropertyTable.h  ReportProcessingDialog.cpp  geometrySetViewData.cpp  geometryViewData.cpp  geometryViewData.h  geometryViewObject.cpp  geometryViewProvider.cpp  (+14 more)
test/: CMakeLists.txt  TestPythonModule.cpp
(+496 files in other folders)
